UI fix: menu on smaller screens is wider, need to account for that space.

--- a/webapp/public/custom.css
+++ b/webapp/public/custom.css
@@ -733,6 +733,12 @@ html {
     }
 }
 
+@media only screen and (max-width:55em) {
+    #maineditor {
+        top:4.5rem !important;
+    }
+}
+
 .ui.fluid.button.half{
     width:50% !important;
 }
